<resources>
    <string name="guide">引导</string>
    <string name="qsrssmm">请输入手势密码</string>
    <string name="kshz">开始绘制</string>
    <string name="wjmm">忘记密码</string>
    <string name="ssmm">手势密码</string>
    <string name="bc">保 存</string>
    <string name="ch">重 绘</string>
    <string name="szssta">设置手势图案</string>
    <string name="szssmm">设置手势图案</string>
    <string name="wjmmw">忘记密码？</string>
    <string name="qsrndsjh">请输入您的手机号</string>
    <string name="zh">账号</string>
    <string name="qsrmm">请输入密码</string>
    <string name="qsrnmm">请输入新密码</string>
    <string name="mm">密码</string>
    <string name="nmm">新密码</string>
    <string name="xyh">新用户</string>
    <string name="lockscreen_access_pattern_start">"开始绘制图案"</string>
    <string name="lockscreen_access_pattern_cleared">"图案已清除"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>
    <string name="lockpattern_retry_button_text">"重试"</string>
    <string name="lockpattern_continue_button_text">"继续"</string>
    <string name="lockpattern_confirm_button_text">"确认"</string>
    <string name="lockpattern_recording_intro_header">"绘制解锁图案"</string>
    <string name="lockpattern_settings_help_how_to_record">"如何绘制解锁图案"</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重试"</string>
    <string name="lockpattern_pattern_entered_header">"图案已记录"</string>
    <string name="lockpattern_need_to_confirm">"请再次绘制解锁图案"</string>
    <string name="lockpattern_need_to_unlock_wrong">"与上次输入不一致，请重试"</string>
    <string name="lockpattern_pattern_confirmed_header">"确认保存新解锁图案"</string>
    <string name="lockpattern_recording_inprogress">"完成后松开手指"</string>
    <string name="gesture_password_guide_text">你可以创建一个解锁图案，这样他人在借用你的手机时，将无法打开应用。</string>
    <string name="gesture_password_guide_creat_btn">创建手势密码</string>
    <string name="ydss">引导手势</string>
    <string name="dl">登录</string>
    <string name="zjm">主界面</string>
    <string name="app_name">蜂赢金服</string>
    <string name="ptsj">运营报告</string>
    <string name="aqbz">安全保障</string>
    <string name="xrhl">新人好礼</string>
    <string name="yqhl">邀请有礼</string>
    <string name="rmtj">热门推荐</string>
    <string name="fyst">蜂赢散投</string>
    <string name="zhsyl">综合收益率</string>
    <string name="tzqx">投资期限</string>
    <string name="qsje">起购金额</string>
    <string name="xgje">回款方式</string>
    <string name="ljgm">立即购买</string>
    <string name="ljst">立即散投</string>
    <string name="wdqb">我的钱包</string>
    <string name="wdstb">我的散投标</string>
    <string name="stxq">散投详情</string>
    <string name="tzjl">投资记录</string>
    <string name="wdkj">我的卡卷</string>
    <string name="wdrm">我的人脉</string>
    <string name="wdtgm">我的推广码</string>
    <string name="sz">设置</string>
    <string name="bqsm">标签说明</string>
    <string name="wdhb">我的花币</string>
    <string name="hbsc">花币商城</string>
    <string name="jlgz">奖励规则</string>
    <string name="scdh">商城兑换</string>
    <string name="l88y">领88元</string>
    <string name="jly">奖励550元</string>
    <string name="hdsm">活动专区</string>
    <string name="ymd">域名贷</string>
    <string name="xyd">信用贷</string>
    <string name="hzxd">合作小贷</string>
    <string name="ztje">在投金额</string>
    <string name="ljyq">立即邀请 赚更多</string>
    <string name="zd">账单</string>
    <string name="ckjymx">可查所有明细</string>
    <string name="ljdl">立即登录</string>
    <string name="none">——.——</string>
    <string name="ljsy">累计收益</string>
    <string name="none1">暂无投资记录哦~</string>
    <string name="none2">暂无任何卡卷哦~</string>
    <string name="none3">暂无任何收益哦~</string>
    <string name="none4">暂无任何散投记录哦~</string>
    <string name="none5">暂无任何账单信息~</string>
    <string name="ljtz">立即投资</string>
    <string name="qb2">全部</string>
    <string name="cyz">持有中</string>
    <string name="yhk">已回款</string>
    <string name="sxsj">失效时间</string>
    <string name="hydj">会员等级</string>
    <string name="dhhb">兑换花币</string>
    <string name="hb">花币</string>
    <string name="cpsm">产品说明</string>
    <string name="syfs">使用方式</string>
    <string name="yjsy">预计收益</string>
    <string name="qrdh">确认兑换</string>
    <string name="yb">银币</string>
    <string name="xyou">现有</string>
    <string name="wdhy">我的好友</string>
    <string name="stjl">散投记录</string>
    <string name="rmjl">人脉奖励</string>
    <string name="rmtj2">人脉统计</string>
    <string name="yqhy">邀请好友</string>
    <string name="wtjdhy">我推荐的好友</string>
    <string name="hytjdhy">好友推荐的好友</string>
    <string name="jsjl50yuan">解锁奖励50元</string>
    <string name="jsjl500yuan">解锁奖励500元</string>
    <string name="ydrm">(一度人脉)</string>
    <string name="erdrm">(二度人脉)</string>
    <string name="sdrm">(三度人脉)</string>
    <string name="fdrm">(四度人脉)</string>
    <string name="rmjlz">人脉奖励中...</string>
    <string name="zcrs">注册人数</string>
    <string name="smrs">实名人数</string>
    <string name="ytzrs">已投资人数</string>
    <string name="hytkdhy">好友推荐的好友</string>
    <string name="edrm">(二度人脉)</string>
    <string name="rmkwndlfhjl">人脉可为您带来丰厚的奖励，详情请查看</string>
    <string name="zrsy">昨日收益(元)</string>
    <string name="qbye">钱包余额(元)</string>
    <string name="qrnhll">7日年化利率(%)</string>
    <string name="wfsy">万份收益</string>
    <string name="yuan">元</string>
    <string name="cz">充值</string>
    <string name="tx">提现</string>
    <string name="gmsl">购买数量</string>
    <string name="xj">小计</string>
    <string name="wydyty">我已阅读并同意</string>
    <string name="xieyi">《蜂赢+协议》</string>
    <string name="santou">标满开始计息，三日内未寻到标的本金将自动退回钱包，可重新进行散投或手动投资。</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载…</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新...\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后开始加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">正在加载中...\u2026</string>
    <string name="text">http://miloisbadboy.com/</string>
    <string name="menu_settings">menu_settings</string>
    <string name="loading_show_start">努力加载中……</string>
    <string name="loading_show_empty">当前暂无数据</string>
    <string name="loading_data_finished">数据加载完成</string>
    <string name="pulldown_to_refresh">下拉可以刷新</string>
    <string name="pulldown_release_to_refresh">释放立即刷新</string>
    <string name="pulldown_refreshing">正在刷新…</string>
    <string name="pulldown_not_updated_yet">暂未更新过</string>
    <string name="pulldown_updated_at">上次更新于%1$s前</string>
    <string name="pulldown_updated_just_now">刚刚更新</string>
    <string name="pulldown_time_error">时间有问题</string>
    <string name="smrz_ts01">蜂赢平台采用与银行一致的认证机制，在充值前必须填写真实的身份信息</string>
    <string name="smrz_ts02">提现时，您的资金只能提取到实名信息对应的银行卡内</string>
    <string name="smrz_ts03">为保证用户信息真实有效，认证过程中需要填写的银行卡充值1元到蜂赢钱包</string>
    <string name="shuoming">说明:</string>
    <string name="shuoming_one">1.好友通过微信“扫一扫”，扫描上面的二维码，在打开的页面中完成注册，好友将成为你的一度人脉。</string>
    <string name="shuoming_two">2.若好友没有通过微信扫描直接进入注册页面，填写您的邀请码，同样可以变成您的一度人脉。</string>
    <string name="yijianfankui">  请在此填写您的意见以及建议</string>
    <string name="zfxx_ts"> 已绑定的银行卡若无法成功提现，请进入微信公众号联系微信客服进行变更。</string>
    <string name="gonggao_message"> 认证支付平安银行维护通知</string>
    <string name="gonggao">公告</string>
    <string name="fenxiangshuoming"> 邀请好友，攒人脉，赚更多</string>
    <string name="gg">上午好，呼吸新鲜空气保持一个好心情</string>
    <string name="futoushouyi"> 复投收益:将提前收回的部分本息，投资到其他的项目中，预留到期时的收益</string>
    <string name="zijintouxiang">资金投向:散投借款人及回款明细，请至个人中心“我的散投标”查看详情</string>
    <string name="fengyingtouzi_zhuming">2000元起，1000的倍数递增</string>
    <string name="touzi_hkfs">一次性到期还本付息，到期后自动打款到蜂赢钱包。</string>
    <string name="touzi_qianbaofukuan">您的钱包余额不足，剩余</string>
    <string name="touzi_qianbaofukuan02">将使用银行卡支付 </string>
    <string name="touzi_qianbaofukuan_true">您确定使用钱包余额购买产品？ </string>
    <string name="qianbao_chongzhi_ts">此处默认使用您绑定的银行卡进行充值</string>
    <string name="qianbao_chongzhi_bz">账户资金安全由中国人保(PICC)100%承保</string>
    <string name="grzx_tuichu_textview">退出后不会删除任何历史数据，下次登陆依然可以使用本账号。 </string>
    <string name="qianbao_jjxq.wait">转出申请已提交，等待银行处理 </string>
    <string name="qianbao_jjxq.tishi">提现一般为24小时内到帐，周一到周四15:00之后提现次日到帐，周五15:00之后提现将顺延至周一到帐。国家法定节假日提现将顺延至工作日到帐。 </string>
    <string name="pz">拍照</string>
    <string name="csjxcxz">从手机相册选择</string>
    <string name="qx">取消</string>
    <string name="me">我</string>
    <string name="find">发现</string>
    <string name="jq">借款</string>
    <string name="tz">投资</string>
    <string name="qb">钱包</string>
    <string name="qd">确定</string>
    <string name="rule">1.人脉可为您带来丰厚的奖励，详情请查看“奖励规则”。</string>
    <string name="rule2">2.当您解锁三度人脉，可获得更多人脉。</string>
    <string name="rule3">3.当您解锁四度人脉，可获得更多人脉。</string>
    <string name="rule4">4.蜂赢平台有权对恶意注册用户按照封禁条例进行封禁处理。</string>
    <string name="yzm">验证码</string>
    <string name="tbsj">投标时间:</string>
    <string name="tbje">投标金额:</string>
    <string name="tbqc">投标期长:</string>
    <string name="nll">年利率</string>
    <string name="jkrxq">借款人详情</string>
    <string name="xxzx">消息中心</string>
    <string name="yh">已还</string>
    <string name="yhm">已还:</string>
    <string name="wdq">未到期</string>
    <string name="wdqm">未到期:</string>
    <string name="yq">逾期</string>
    <string name="yqm">逾期:</string>
    <string name="hkrq">回款日期</string>
    <string name="bjy">本金(元)</string>
    <string name="lxy">利息(元)</string>
    <string name="debx">等额本息</string>
    <string name="hkztsm">还款状态说明</string>
    <string name="brule1">借款人正常还款，资金已到账</string>
    <string name="brule2">回款时间未到，等待借款人的下期还款</string>
    <string name="brule3">借款人未能准时的还款，平台先行垫付本期还款，并且向借款人进行还款催收</string>
    <string name="brule4">备注：蜂赢平台充分响应国家相关监管部门召唤，在保障投资人利益的同时，充分披露借款人信息以及贷后管理状态</string>
    <string name="qsrtxyzm">请输入图形验证码</string>
    <string name="qsrsjyzm">请输入手机验证码</string>
    <string name="hqyzm">获取验证码</string>
    <string name="zc">注册</string>
    <string name="xgmm">修改密码</string>
    <string name="jsaq">技术安全</string>
    <string name="zjaq">资金安全</string>
    <string name="zjtd">专家团队</string>
    <string name="msaq">模式安全</string>
    <string name="ftzz">风投注资</string>
    <string name="hgjy">合规经营</string>
    <string name="safe6">阿里金融云服务器，SSL加密数据传输，多服务器灾备，三层防火墙，保障7*24小时数据安全和备份安全。</string>
    <string name="safe5">资金由第三方进行支付，并与汉口银行达成存管合作，了解连连支付，汉口银行</string>
    <string name="safe4">专业级风控团队和运作团队认证，保障安全，了解风控及借贷流程</string>
    <string name="safe3">甄选优质标的，严谨合规操作，小额分散风险可控，了解分散投资</string>
    <string name="safe2">上市公司腾信创新（股票代码：300392）战略投资，了解腾信股份</string>
    <string name="safe1">严格遵循网络借贷标准规范经营，环节公开透明</string>
    <string name="hkly">还款来源</string>
    <string name="source1">第一还款来源为借款人正经经营还款</string>
    <string name="source2">第二还款来源为出借人无条件赎回</string>
    <string name="source3">第三还款来源为担保人回收债权</string>
    <string name="source4">第四还款来源为货物的回款</string>
    <string name="source5">第五还款来源为蜂赢理财风险保证金</string>
    <string name="wdewm">我的二维码</string>
    <string name="zhxx">账户信息</string>
    <string name="xm">姓名</string>
    <string name="kh">卡号</string>
    <string name="ndyqm">您的邀请码:</string>
    <string name="bczdktx">本次最多可提现(元)</string>
    <string name="qsrtxje">请输入提现金额</string>
    <string name="qrtx">确认提现</string>
    <string name="mssf">免手续费</string>
    <string name="tx_tip1">提现成功后将于</string>
    <string name="tx_time">24小时</string>
    <string name="tx_tip2">内到帐（节假日顺延）</string>
    <string name="tx_tip3">本周您还可以免手续提现</string>
    <string name="tx_num">1次</string>
    <string name="dh">电话</string>
    <string name="tx_tip4">若提现金额不足1000元则手续费3元/笔</string>
</resources>