<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             style="@style/TwoMatchLayout"
              android:background="@color/bg"
              android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/touzi_fenshu">

        <ImageView
            android:id="@+id/iv_home_left"
            style="@style/TwoWrapLayout"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:padding="10dp"
            android:src="@drawable/back_left_big"/>

        <TextView
            android:id="@+id/title"
            style="@style/TwoWrapLayout"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:text="@string/hkly"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size36"/>
    </RelativeLayout>
    <TextView
        style="@style/Three30Text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_left24"
        android:text="@string/source1"/>

    <View style="@style/xian"/>

    <TextView
        style="@style/Three30Text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_left24"
        android:text="@string/source2"/>

    <View style="@style/xian"/>

    <TextView
        style="@style/Three30Text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_left24"
        android:text="@string/source3"/>

    <View style="@style/xian"/>

    <TextView
        style="@style/Three30Text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_left24"
        android:text="@string/source4"/>

    <View style="@style/xian"/>

    <TextView
        style="@style/Three30Text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin_left24"
        android:text="@string/source5"/>

    <View style="@style/xian"/>
</LinearLayout>